# vrp-cpp

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  apply-style.sh  docker-compose.yml
example/: AlgorithmDefinition.hpp  CMakeLists.txt  LogToSelected.hpp  SolverExample.cc  SolverExe.cc  SolverLib.cc  VarTypeSolver.hpp
src/: CMakeLists.txt  Runner.cpp  Runner.cu  Solver.hpp  Stub.cc  Stub.hpp
src/algorithms/: CartesianDistance.cu  CartesianProduct.cu  Convolutions.cu  Convolutions.hpp  Costs.cu  DefaultAlgorithm.hpp  Distances.cu  Transitions.cu
src/algorithms/common/: Convolutions.hpp  Tours.hpp
src/algorithms/constraints/: CompositeConstraint.hpp  HardRouteConstraint.hpp  SoftRouteConstraint.hpp
src/algorithms/construction/: InsertionActivityContext.hpp  InsertionConstraint.hpp  InsertionContext.hpp  InsertionEvaluator.hpp  InsertionHeuristic.hpp  InsertionProgress.hpp  InsertionResult.hpp  InsertionRouteContext.hpp  InsertionRouteState.hpp  InsertionSolutionContext.hpp
src/algorithms/convolutions/: BestConvolutions.cu  BestConvolutions.hpp  JointConvolutions.cu  JointConvolutions.hpp  Models.hpp  SlicedConvolutions.cu  SlicedConvolutions.hpp
src/algorithms/costs/: Models.hpp  SolutionCosts.cu  SolutionCosts.hpp  TransitionCosts.cu  TransitionCosts.hpp
src/algorithms/distances/: Cartesian.hpp  Geographic.hpp
src/algorithms/genetic/: Crossovers.cu  Crossovers.hpp  Evolution.cu  Evolution.hpp  Listeners.cu  Listeners.hpp  Models.hpp  Mutations.cu  Mutations.hpp  Populations.cu  Populations.hpp  Selection.cu  Selection.hpp  Settings.hpp  Strategies.cu  Strategies.hpp  Terminations.cu  Terminations.hpp
src/algorithms/heuristics/: CheapestInsertion.cu  CheapestInsertion.hpp  ConvolutionInsertion.cu  ConvolutionInsertion.hpp  Dummy.cu  Dummy.hpp  Models.hpp  NearestNeighbor.cu  NearestNeighbor.hpp  Operators.cu  Operators.hpp  RandomInsertion.cu  RandomInsertion.hpp
src/algorithms/objectives/: MaximizeJobAssignment.hpp  ObjectiveFunction.hpp  PenalizeUnassignedJobs.hpp
src/algorithms/refinement/: RefinementContext.hpp
src/algorithms/ruin/: JobNeighbourhood.hpp
src/algorithms/transitions/: Executors.cu  Executors.hpp  Factories.cu  Factories.hpp
src/heuristics/: CheapestInsertion.cu  NearestNeighbor.cu  NearestNeighbor.hpp  NoTransition.cu
src/input/: SolomonReader.cu
src/iterators/: Aggregates.hpp  CartesianProduct.cu  CartesianProduct.hpp  Sequential.hpp
src/iterators/detail/: Aggregates.inl
src/models/: Convolution.hpp  Customers.hpp  JobsLock.hpp  Locations.hpp  Lock.hpp  Plan.hpp  Problem.hpp  Resources.hpp  RoutingMatrix.hpp  Solution.hpp  Solutions.hpp  Tasks.hpp  Transition.hpp
src/models/common/: Cost.hpp  Dimension.hpp  Distance.hpp  Duration.hpp  Location.hpp  Profile.hpp  Schedule.hpp  TimeWindow.hpp  Timestamp.hpp  Unit.hpp
src/models/costs/: ActivityCosts.hpp  MatrixTransportCosts.hpp  TransportCosts.hpp
src/models/extensions/: Factories.hpp
src/models/problem/: Actor.hpp  Costs.hpp  Detail.hpp  Driver.hpp  Fleet.hpp  Job.hpp  JobDetail.hpp  JobVisitor.hpp  Jobs.hpp  Matrix.hpp  Routing.hpp  Sequence.hpp  Service.hpp  Shipment.hpp  Vehicle.hpp  VehicleDetail.hpp
src/models/solution/: Activity.hpp  Actor.hpp  Dispatcher.hpp  Registry.hpp  Route.hpp  Solution.hpp  Statistic.hpp  Stop.hpp  Tour.hpp
src/runtime/: Config.hpp  DeviceUnique.hpp  DeviceVariant.hpp  UniquePointer.hpp  Variant.hpp
src/runtime/detail/: DeviceVariant.inl  Helpers.hpp  Variant.inl  VariantHelpers.hpp
src/solver/genetic/: PopulationFactory.cu  PopulationFactory.hpp  Populations.cu  Populations.hpp  Settings.hpp
src/streams/in/: HereJson.hpp  LiLim.hpp  RichJson.hpp  Solomon.hpp
src/streams/input/: SolomonReader.cu  SolomonReader.hpp
src/streams/output/: ContainerWriter.hpp  GeoJsonWriter.cu  GeoJsonWriter.hpp  MatrixTextWriter.cu  MatrixTextWriter.hpp  VectorWriter.hpp
src/utils/: CartesianProduct.cu  Collections.hpp  Date.hpp  Locations.hpp  Measure.hpp  Memory.hpp  Permutations.hpp  Pool.hpp  Profiler.hpp  Random.hpp  Resolvers.hpp  StreamUtils.hpp
src/utils/extensions/: Hash.hpp  Ranges.hpp  Variant.hpp
src/utils/geo/: Resolvers.hpp
src/utils/memory/: Allocations.hpp  DevicePool.hpp  DeviceUnique.hpp
src/utils/random/: FilteredDistribution.hpp  TransformedDistribution.hpp  Visualizer.hpp
src/utils/templates/: IndexOf.hpp  OneOf.hpp
src/utils/types/: DeviceVariant.hpp
src/utils/validation/: SolutionChecker.cu  SolutionChecker.hpp
test/: CMakeLists.txt  EnvironmentTest.cu  SolverTest.cc  config.hpp
test/algorithms/: ConvolutionsTest.cu  CostsTest.cu
test/algorithms/construction/: InsertionConstraintTest.cc  InsertionEvaluatorTest.cc
test/algorithms/convolutions/: BestConvolutionsTest.cu  ConvolutionsTest.cu  JointConvolutionsTest.cu  SlicedConvolutionsTest.cu
test/algorithms/costs/: CostsTest.cu
test/algorithms/genetic/: CrossoverTest.cu  EvolutionTest.cu  MutationTest.cu  PopulationTest.cu  SelectionTest.cu  StrategiesTest.cu
test/algorithms/heuristics/: NearestNeighborTest.cu  RandomInsertionTest.cu
test/algorithms/objectives/: MaximizeJobAssignmentTest.cc  PenalizeUnassignedJobsTest.cc
test/algorithms/ruin/: JobNeighbourhoodTest.cc
test/algorithms/transitions/: ExecutorsTest.cu  FactoriesTest.cu
test/heuristics/: CheapestInsertionTest.cu  NearestNeighborTest.cu
test/input/: SolomonReaderTest.cu
test/models/problem/: FleetTest.cc  JobsTest.cc
test/models/solution/: DispatcherTest.cc  RegistryTest.cc  TourTest.cc
test/runtime/: ConfigTest.cu  Memory.cu  Types.cu
test/scenarios/: OpenVrpTest.cc
test/scenarios/here/: BreakAssignmentTest.cc  (+1 more)
test/test_utils/: ConvolutionUtils.hpp  MemoryUtils.hpp  PopulationFactory.hpp  ProblemStreams.hpp  SettingsFactory.hpp  SolomonBuilder.hpp  Solvers.hpp  SpecificSolutions.hpp  StreamSolver.hpp  TaskUtils.hpp  VectorUtils.hpp
test/utils/: DateTest.cc  Memory.cu  PermutationsTest.cc  Types.cu  Validations.cu
tools/: CMakeLists.txt
tools/runner/: Resolvers.hpp  main.cc  main.cu
(+248 files in other folders)
